--- a/DOM/AboutUsCss.css
+++ b/DOM/AboutUsCss.css
@@ -279,6 +279,7 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .profile-text {
@@ -293,4 +294,11 @@ h1, h2, h3, h4, h5, h6 {
 .profile-text p {
   font-size: 14px;
   color: #888888;
+}
+
+.prof
+{
+	width: 100%;
+   height: 100%;
+   object-fit: cover;
 }
