--- a/DOM/ReviewCSS.css
+++ b/DOM/ReviewCSS.css
@@ -84,9 +84,9 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 700px;
+    height: 850px;
 
-    background-image: url("../img/space.jpg");
+    background-image: url("../img/ladymaria.jpg");
     }
 
 
@@ -153,3 +153,65 @@ h1, h2, h3, h4, h5, h6 {
       text-align: center;
       color: white;
     }
+
+
+/*-----------------------------------------------------------------*/
+
+#reviewimg
+{
+    width: 250px;
+    height: 150px;
+    margin-right: 50px;
+    border-radius: 15px;
+
+
+}
+
+#reviewtext
+{
+padding-left: 20px;
+}
+#reviewrow
+{
+    margin: 40px;
+}
+
+.line {
+   
+  border: none;
+  border-top: 1px solid white;
+
+ 
+}
+#main
+{
+    background-color: #2F3252;
+    color: white;
+}
+
+ .footer {
+      background-color: #000D1F;
+      padding: 20px 0;
+      text-align: center;
+      color: white;
+    }
+
+
+.btn
+{
+margin: 15px;
+
+}
+#firstbtn
+{
+border-bottom-left-radius:25px ;
+border-top-left-radius:25px ;
+margin-left: 300px;
+}
+#lastbtn
+{
+
+border-top-right-radius: 25px;
+border-bottom-right-radius: 25px;
+
+}
