--- a/DOM/style.css
+++ b/DOM/style.css
@@ -143,3 +143,22 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #fff;
     color: #333;
 }
+
+/* info */
+.info {
+    text-align: center;
+    padding: 80px 0;
+    background-color: #2D384A;
+}
+
+.info__title {
+    font-size: 30px;
+    font-weight: 700;
+    color: white;
+    text-transform: uppercase;
+}
+
+.info__suptitle {
+    font-size: 24px;
+    color: #fff;
+}
