--- a/DOM/AboutUsCss.css
+++ b/DOM/AboutUsCss.css
@@ -1,304 +1,433 @@
 
 
 .sidenav {
-  height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-}
-
-/* The navigation menu links */
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-/* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-  position: absolute;
-  top: 30px;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-  transition: margin-left .5s;
-  padding: 20px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-
-
-
-body {
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-
-    font-size: 15px;
-    line-height: 1.6;
-    color: #333;
-}
-
-*,
-*:before,
-*:after {
-    box-sizing: border-box;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-}
-
-
-/* Container */
-.container {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-
-
-/* Intro */
-.intro {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 700px;
-
-    background-image: url("../img/space.jpg");
-    }
-
-
-/* Header */
-.header {
-    width: 100%;
-    padding-top: 30px;
-
-    position: absolute;
-    top: 0;
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
     left: 0;
-    right: 0;
-    z-index: 1000;
-}
-
-.header__inner {
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    top: 30px;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+  
+  
+  
+  body {
+      margin: 0;
+      font-family: 'Montserrat', sans-serif;
+  
+      font-size: 15px;
+      line-height: 1.6;
+      color: #333;
+  }
+  
+  *,
+  *:before,
+  *:after {
+      box-sizing: border-box;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+      margin: 0;
+  }
+  
+  
+  /* Container */
+  .container {
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+  }
+  
+  
+  
+  /* Intro */
+  .intro {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+      height: 700px;
+  
+      background-image: url("space.jpg");
+      }
+  
+  
+  /* Header */
+  .header {
+      width: 100%;
+      padding-top: 30px;
+  
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 1000;
+  }
+  
+  .header__inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  }
+  
+  .header__logo {
+      font-size: 30px;
+      font-weight: 700;
+      color: #fff;
+  
+  }
+  
+  
+  /* Nav */
+  .nav {
+      font-size: 20px;
+      text-transform: uppercase;
+  }
+  
+  
+  
+  .nav__link {
+      display: inline-block;
+      vertical-align: top;
+      margin: 0 15px;
+      position: relative;
+  
+      color: black;
+      text-decoration: none;
+  
+      transition: color .1s linear;
+  }
+  
+  
+  
+  .nav__link:hover {
+      color: #fce38a;
+  }
+  
+  .nav__link:hover:after,
+  .nav__link.active:after {
+      opacity: 1;
+  }
+  
+    
+  
+  
+  
+      #scroll-indicator {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background-color: #f2f2f2;
+      }
+  
+      #scroll-progress {
+        height: 100%;
+        background-color: #EA6559;
+        width: 0;
+        transition: width 0.2s ease-in-out;
+      }
+  
+  
+  
+  /*-----------------------------------------------------------------------------------------------*/
+  
+  
+  #chat-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+  
+  }
+  
+  #chat-button {
+    background-color: #EA6559;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    cursor: pointer;
+  }
+  
+  #chat-window {
+    display: none;
+    position: fixed;
+    bottom: 90px;
+    right: 20px;
+    width: 300px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+  }
+  
+  #chat-header {
+    background-color:#EA6559;
+    color: #fff;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.header__logo {
-    font-size: 30px;
-    font-weight: 700;
+    border-radius: 10px;
+  }
+  
+  #chat-header span {
+    font-weight: bold;
+  }
+  
+  #chat-body {
+    padding: 10px;
+    height: 200px;
+    overflow-y: auto;
+  }
+  
+  #chat-footer {
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  #message-input {
+    flex: 1;
+    padding: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  #send-button {
+    background-color:#EA6559;
     color: #fff;
-
-}
-
-
-/* Nav */
-.nav {
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
+  
+  .fa-comment,
+  .fa-times {
     font-size: 20px;
-    text-transform: uppercase;
-}
-
-
-
-.nav__link {
-    display: inline-block;
-    vertical-align: top;
-    margin: 0 15px;
-    position: relative;
-
-    color: black;
-    text-decoration: none;
-
-    transition: color .1s linear;
-}
-
-
-
-.nav__link:hover {
-    color: #fce38a;
-}
-
-.nav__link:hover:after,
-.nav__link.active:after {
-    opacity: 1;
-}
-
-  .footer {
-      background-color: #000D1F;
-      padding: 20px 0;
-      text-align: center;
-      color: white;
-    }
-
-
-
-    #scroll-indicator {
-      position: fixed;
-      top: 0;
-      left: 0;
+  }
+  
+  .message {
+    background-color: #f1f1f1;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+  }
+  
+  .user {
+    background-color: lightgrey;
+    align-self: flex-end;
+  }
+  
+  
+  /*-----------------------------------------------------------------------------------------------*/
+  .profile {
+    text-align: center;
+  }
+  
+  .profile-picture {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #e5e5e5;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+  
+  .profile-text {
+    margin-top: 10px;
+  }
+  
+  .profile-text h4 {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+  
+  .profile-text p {
+    font-size: 14px;
+    color: #888888;
+  }
+  
+  .prof
+  {
       width: 100%;
-      height: 4px;
-      background-color: #f2f2f2;
-    }
+     height: 100%;
+     object-fit: cover;
+  }
 
-    #scroll-progress {
-      height: 100%;
-      background-color: #EA6559;
-      width: 0;
-      transition: width 0.2s ease-in-out;
-    }
+  /* footer */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
-
-
-/*-----------------------------------------------------------------------------------------------*/
-
-
-#chat-container {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-#chat-button {
-  background-color: #EA6559;
-  color: #fff;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 50px;
-  cursor: pointer;
-}
-
-#chat-window {
-  display: none;
-  position: fixed;
-  bottom: 90px;
-  right: 20px;
-  width: 300px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-}
-
-#chat-header {
-  background-color:#EA6559;
-  color: #fff;
-  padding: 10px;
+.foot {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 10px;
+  background: #333;
+  justify-content: flex-end;
+  align-items: flex-end;
+  min-height: 50vh;
 }
 
-#chat-header span {
-  font-weight: bold;
-}
-
-#chat-body {
-  padding: 10px;
-  height: 200px;
-  overflow-y: auto;
-}
-
-#chat-footer {
-  padding: 10px;
+.footer {
+  position: relative;
+  width: 100%;
+  background: #3586ff;
+  min-height: 100px;
+  padding: 20px 50px;
   display: flex;
-  justify-content: space-between;
-}
-
-#message-input {
-  flex: 1;
-  padding: 5px;
-  border: 1px solid #ccc;
-}
-
-#send-button {
-  background-color:#EA6559;
-  color: #fff;
-  border: none;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-
-.fa-comment,
-.fa-times {
-  font-size: 20px;
-}
-
-.message {
-  background-color: #f1f1f1;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-}
-
-.user {
-  background-color: lightgrey;
-  align-self: flex-end;
-}
-
-
-/*-----------------------------------------------------------------------------------------------*/
-.profile {
-  text-align: center;
-}
-
-.profile-picture {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: #e5e5e5;
-  display: inline-flex;
-  align-items: center;
   justify-content: center;
-  overflow: hidden;
+  align-items: center;
+  flex-direction: column;
 }
 
-.profile-text {
-  margin-top: 10px;
+.social-icon,
+.menu {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
 }
 
-.profile-text h4 {
-  font-size: 18px;
-  margin-bottom: 5px;
+.social-icon__item,
+.menu__item {
+  list-style: none;
 }
 
-.profile-text p {
-  font-size: 14px;
-  color: #888888;
+.social-icon__link {
+  font-size: 2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+}
+.social-icon__link:hover {
+  transform: translateY(-10px);
 }
 
-.prof
-{
-	width: 100%;
-   height: 100%;
-   object-fit: cover;
+.menu__link {
+  font-size: 1.2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+  text-decoration: none;
+  opacity: 0.75;
+  font-weight: 300;
+}
+
+.menu__link:hover {
+  opacity: 1;
+}
+
+.footer p {
+  color: #fff;
+  margin: 15px 0 10px 0;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.wave {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url("https://i.ibb.co/wQZVxxk/wave.png");
+  background-size: 1000px 100px;
+}
+
+.wave#wave1 {
+  z-index: 1000;
+  opacity: 1;
+  bottom: 0;
+  animation: animateWaves 4s linear infinite;
+}
+
+.wave#wave2 {
+  z-index: 999;
+  opacity: 0.5;
+  bottom: 10px;
+  animation: animate 4s linear infinite !important;
+}
+
+.wave#wave3 {
+  z-index: 1000;
+  opacity: 0.2;
+  bottom: 15px;
+  animation: animateWaves 3s linear infinite;
+}
+
+.wave#wave4 {
+  z-index: 999;
+  opacity: 0.7;
+  bottom: 20px;
+  animation: animate 3s linear infinite;
+}
+
+@keyframes animateWaves {
+  0% {
+    background-position-x: 1000px;
+  }
+  100% {
+    background-positon-x: 0px;
+  }
+}
+
+@keyframes animate {
+  0% {
+    background-position-x: -1000px;
+  }
+  100% {
+    background-positon-x: 0px;
+  }
 }
