--- a/DOM/AboutUsCss.css
+++ b/DOM/AboutUsCss.css
@@ -88,7 +88,7 @@
       width: 100%;
       height: 700px;
   
-      background-image: url("space.jpg");
+      background-image: url("../img/space.jpg");
       }
   
   
@@ -429,5 +429,37 @@
   }
   100% {
     background-positon-x: 0px;
+  }
+}
+
+
+#typing-dots {
+	position: absolute;
+  font-size: 20px;
+  margin-top: 120px;
+  color: black;
+  display: none;
+
+}
+
+#typing-dots::after {
+  content: "...";
+  animation: typing-dots 2s infinite;
+  color: black;
+
+}
+
+@keyframes typing-dots {
+  0% {
+    content: "";
+  }
+  33% {
+    content: ".";
+  }
+  66% {
+    content: "..";
+  }
+  100% {
+    content: "...";
   }
 }
