--- a/DOM/ReviewCSS.css
+++ b/DOM/ReviewCSS.css
@@ -230,7 +230,7 @@ border-bottom-right-radius: 25px;
 
 .foot {
   display: flex;
-  background: #333;
+  background:#1C1D3D;
   justify-content: flex-end;
   align-items: flex-end;
   min-height: 50vh;
