--- a/DOM/AboutUsCss.css
+++ b/DOM/AboutUsCss.css
@@ -463,7 +463,9 @@
     content: "...";
   }
 }
+
 .logo {
-  filter: grayscale(100%);
-  width: 100px;
+ width: 50px;
+ height: 50px;
+ scale: 200%;
 }
