--- a/DOM/style.css
+++ b/DOM/style.css
@@ -550,3 +550,144 @@ width: 760px;
  height: 50px;
  scale: 200%;
 }
+
+
+
+.sc
+{
+transition: transform 0.3s;
+      
+      transform: scale(1);
+
+}
+.sc:hover {
+    
+     
+      
+      transform: scale(1.2);
+
+}
+
+ /*-----------------------------------------------------------------------------------------------*/
+  
+  
+  #chat-container {
+    position: fixed;
+    bottom: 20px;
+    z-index: 9999;
+
+  
+  }
+  
+  #chat-button {
+    background-color: #EA6559;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    cursor: pointer;
+  }
+  
+  #chat-window {
+    display: none;
+    position: fixed;
+    bottom: 90px;
+    
+    width: 300px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    z-index: 9999;
+  }
+  
+  #chat-header {
+    background-color:#EA6559;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+  }
+  
+  #chat-header span {
+    font-weight: bold;
+  }
+  
+  #chat-body {
+    padding: 10px;
+    height: 200px;
+    overflow-y: auto;
+  }
+  
+  #chat-footer {
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  #message-input {
+    flex: 1;
+    padding: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  #send-button {
+    background-color:#EA6559;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
+  
+  .fa-comment,
+  .fa-times {
+    font-size: 20px;
+  }
+  
+  .message {
+    background-color: #f1f1f1;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+  }
+  
+  .user {
+    background-color: lightgrey;
+    align-self: flex-end;
+  }
+  
+  
+#typing-dots {
+    position: absolute;
+  font-size: 20px;
+  margin-top: 120px;
+  color: black;
+  display: none;
+
+}
+
+#typing-dots::after {
+  content: "...";
+  animation: typing-dots 2s infinite;
+  color: black;
+
+}
+
+@keyframes typing-dots {
+  0% {
+    content: "";
+  }
+  33% {
+    content: ".";
+  }
+  66% {
+    content: "..";
+  }
+  100% {
+    content: "...";
+  }
+}
+  /*-----------------------------------------------------------------------------------------------*/
