--- a/DOM/ReviewCSS.css
+++ b/DOM/ReviewCSS.css
@@ -85,6 +85,7 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: center;
     width: 100%;
     height: 850px;
+    position: relative;
 
     background-image: url("../img/ladymaria.jpg");
    background-repeat: no-repeat;
@@ -92,8 +93,19 @@ h1, h2, h3, h4, h5, h6 {
     -moz-background-size: contain;
     -o-background-size: contain;
     background-size: cover;
+ 
     }
 
+.text-block {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  opacity: 85%;
+}
 
 /* Header */
 .header {
@@ -117,6 +129,21 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 30px;
     font-weight: 700;
     color: #fff;
+       
+
+}
+.sc
+{
+transition: transform 0.3s;
+      
+      transform: scale(1);
+
+}
+.sc:hover {
+    
+     
+      
+      transform: scale(1.2);
 
 }
 
@@ -357,3 +384,128 @@ border-bottom-right-radius: 25px;
  height: 50px;
  scale: 200%;
 }
+
+ /*-----------------------------------------------------------------------------------------------*/
+  
+  
+  #chat-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+  z-index: 9999;
+  }
+  
+  #chat-button {
+    background-color: #EA6559;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    cursor: pointer;
+  }
+  
+  #chat-window {
+    display: none;
+    position: fixed;
+    bottom: 90px;
+    right: 20px;
+    width: 300px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    z-index: 9999;
+  }
+  
+  #chat-header {
+    background-color:#EA6559;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+  }
+  
+  #chat-header span {
+    font-weight: bold;
+  }
+  
+  #chat-body {
+    padding: 10px;
+    height: 200px;
+    overflow-y: auto;
+  }
+  
+  #chat-footer {
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  #message-input {
+    flex: 1;
+    padding: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  #send-button {
+    background-color:#EA6559;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
+  
+  .fa-comment,
+  .fa-times {
+    font-size: 20px;
+  }
+  
+  .message {
+    background-color: #f1f1f1;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+  }
+  
+  .user {
+    background-color: lightgrey;
+    align-self: flex-end;
+  }
+  
+
+
+#typing-dots {
+    position: absolute;
+  font-size: 20px;
+  margin-top: 120px;
+  color: black;
+  display: none;
+
+}
+
+#typing-dots::after {
+  content: "...";
+  animation: typing-dots 2s infinite;
+  color: black;
+
+}
+
+@keyframes typing-dots {
+  0% {
+    content: "";
+  }
+  33% {
+    content: ".";
+  }
+  66% {
+    content: "..";
+  }
+  100% {
+    content: "...";
+  }
+}
+  
+  /*-----------------------------------------------------------------------------------------------*/
